--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  nav>a.active {
+    color: #63B700;
+  }
+
+  header button:hover svg path {
+    fill: #fff;
+  }
+
+  header div button:hover svg path {
+    fill: #323232;
+    transition: all 0.5s ease;
+  }
+
+  .overlay {
+    background-color: rgba(0, 0, 0, 0.5);
+    @apply fixed top-0 left-0 w-full h-full
+  }
+
+  .bread li a span::after{
+    content: ' / ';
+  }
+
+  #changeContent:hover::placeholder {
+    content: 'Salom';
+    color: #63B700;
+  }
+}
