--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,6 @@
 @tailwind utilities;
 
 @layer components {
-  nav>a.active {
-    color: #63B700;
-  }
-
   header button:hover svg path {
     fill: #fff;
   }
@@ -24,6 +20,7 @@
   .bread li a::after {
     content: "/";
     margin: 0 15px;
+    color: #323232;
   }
 
   #changeContent:hover::placeholder {
@@ -33,5 +30,23 @@
 
   .stageList:last-child div span {
     @apply text-orange opacity-100 -z-10
+  }
+
+  .link {
+    background-color: rgba(66, 133, 244, 0.2);
+    @apply inline-flex items-center justify-between text-textGrey w-full pr-5 pl-5 font-montserrat text-lg transition-all duration-150 py-2 rounded-md md:w-auto md:w-60 lg:w-96
+  }
+
+  .link:hover {
+    background-color: rgba(66, 133, 244, 0.3);
+  }
+
+  .bg-img {
+    transition: all 300ms ease;
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+
+  .bg-img:hover {
+    background-color: rgba(0, 0, 0, 0.5);
   }
 }
