--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@
     content: "/";
     margin: 0 15px;
     color: #323232;
+    @apply mx-2 md:mx-3 lg:mx-4
   }
 
   #changeContent:hover::placeholder {
