--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@
 
   .link {
     background-color: rgba(66, 133, 244, 0.2);
-    @apply inline-flex items-center justify-between text-textGrey w-full pr-5 pl-5 font-montserrat text-lg transition-all duration-150 py-2 rounded-md md:w-auto md:w-60 lg:w-96
+    @apply inline-flex items-center justify-between text-textGrey w-full pr-5 pl-5 font-montserrat text-lg transition-all duration-150 py-2 rounded-md md:w-80 lg:w-96
   }
 
   .link:hover {
