add news page and more things

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 @layer components {
+  body{
+    @apply overflow-x-hidden
+  }
+
   header .top:hover svg path {
     fill: #fff;
   }
