--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @layer components {
-  body{
+  body {
     @apply overflow-x-hidden
   }
 
@@ -14,6 +14,14 @@
   header div .top:hover svg path {
     fill: #323232;
     transition: all 0.5s ease;
+  }
+
+  [data-aos^=fade][data-aos^=fade] {
+    @apply opacity-100
+  }
+
+  [data-aos=fade-up] {
+    transform: translate3d(0, 80px, 0);
   }
 
   .dropdown:hover .dropdown_menu {
