--- a/src/index.css
+++ b/src/index.css
@@ -78,12 +78,81 @@
     background-color: rgba(66, 133, 244, 0.3);
   }
 
+  .bg-rgba {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+
   .bg-img {
-    transition: all 300ms ease;
     background-color: rgba(0, 0, 0, 0.3);
   }
 
   .bg-img:hover {
+    transition: all 300ms ease;
     background-color: rgba(0, 0, 0, 0.5);
+  }
+
+  .slide:hover .prev,
+  .next {
+    @apply opacity-100 transition-all duration-300 translate-x-6
+  }
+
+  .slide:hover .next {
+    @apply opacity-100 transition-all duration-300 -translate-x-6
+  }
+
+  .prev,
+  .next {
+    position: absolute;
+    top: 42%;
+    transition: all;
+    transition-duration: 300ms;
+    width: 50px;
+    height: 50px;
+    color: #63B700;
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 1;
+    border: 1px solid #7f7f7f;
+  }
+
+  .prev {
+    background: #fff url('./assets/img/chevron-left-rounded.svg') center no-repeat;
+    left: 10px;
+  }
+
+  .prev:hover {
+    border: 1px solid #63B700;
+    background: #63B700 url('./assets/img/chevron-left-rounded-white.svg') center no-repeat;
+  }
+
+  .next {
+    background: #fff url('./assets/img/chevron-right-rounded.svg') center no-repeat;
+    right: 10px;
+  }
+
+  .next:hover {
+    border: 1px solid #63B700;
+    background: #63B700 url('./assets/img/chevron-right-rounded-white.svg') center no-repeat;
+  }
+
+  .swiper-pagination .swiper-pagination-bullet {
+    padding: 5px 5px;
+    border-radius: 0;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: 2px solid #7f7f7f;
+    color: #000;
+    opacity: 1;
+    background: transparent;
+  }
+
+  .swiper-pagination .swiper-pagination-bullet:hover {
+    background: #63B700;
+  }
+
+  .swiper-pagination .swiper-pagination-bullet-active {
+    background: #63B700;
+    border: 2px solid #63B700;
   }
 }
