--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 @layer base {
+  html {
+    @apply overflow-x-hidden
+  }
+
   body {
     @apply font-raleway text-mainBlack text-base font-normal
   }
