--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,8 @@
 @tailwind utilities;
 
 @layer base {
-  html,
   body {
-    @apply overflow-x-hidden
-  }
-
-  body {
-    @apply font-raleway text-mainBlack text-base font-normal
+    @apply font-raleway text-mainBlack text-base font-normal overflow-x-hidden
   }
 }
 
