--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 @layer base {
+  html {
+    scrollbar-gutter: stable;
+  }
+
   body {
     @apply font-raleway text-mainBlack text-base font-normal overflow-x-hidden
   }
@@ -15,14 +19,18 @@
 
   header div .top:hover svg path {
     fill: #323232;
+    -webkit-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
   }
 
   .news-btn-shadow {
+    -webkit-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
 
   [data-aos=fade-up] {
+    -webkit-transform: translate3d(0, 80px, 0);
     transform: translate3d(0, 80px, 0);
   }
 
@@ -59,7 +67,6 @@
   }
 
   #changeContent:hover::placeholder {
-    content: 'Salom';
     color: #63B700;
   }
 
@@ -85,6 +92,8 @@
   }
 
   .bg-img:hover {
+    -webkit-transition: all 300ms ease;
+    -o-transition: all 300ms ease;
     transition: all 300ms ease;
     background-color: rgba(0, 0, 0, 0.5);
   }
@@ -102,7 +111,11 @@
   .next {
     position: absolute;
     top: 42%;
+    -webkit-transition: all;
+    -o-transition: all;
     transition: all;
+    -webkit-transition-duration: 300ms;
+    -o-transition-duration: 300ms;
     transition-duration: 300ms;
     width: 50px;
     height: 50px;
