--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 @layer base {
   html {
     scrollbar-gutter: stable;
+    @apply overflow-x-hidden
   }
 
   body {
@@ -27,11 +28,6 @@
   .news-btn-shadow {
     -webkit-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  }
-
-  [data-aos=fade-up] {
-    -webkit-transform: translate3d(0, 80px, 0);
-    transform: translate3d(0, 80px, 0);
   }
 
   .dropdown:hover .dropdown_menu {
